src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap");

:root {
  /* Primary */
  --very-dark-blue: hsl(233, 47%, 7%);
  --dark-desaturated-blue: hsl(244, 38%, 16%);
  --soft-violet: hsl(277, 64%, 61%);

  /* Neutral */

  --white: hsl(0, 0%, 100%);
  --slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
  --slightly-transparent-white: hsla(0, 0%, 100%, 0.6);
  /* Body Copy */
  --font-size: 15px;

  /* Font */

  --font-inter: "Inter", sans-serif;
  --font-lexend-deca: "Lexend Deca", sans-serif;
  /* image */
  --filter-color: hsl(277, 70%, 36%);
}
html,
body,
#root {
  width: 100%;
  height: 100%;
}
body {
  background-color: var(--very-dark-blue);
}
#root {
  font-size: var(--font-size);
  color: var(--white);
}
.text-font-inter {
  font-family: var(--font-inter);
}
.text-font-lexend-deca {
  font-family: var(--font-lexend-deca);
}
.card-container {
  margin: 10% auto;
  border-radius: 20px;
}
.card-container-image {
  position: relative;
}
.card-container-image img {
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
}
.card-container-image::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: var(--filter-color);
  opacity: 0.4;
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
}

@media (max-width: 768px) {
  .card-container {
    width: 85%;
    min-width: 350px;
    flex-direction: column-reverse;
    height: 95%;
    border-top-right-radius: 15px;
    border-top-left-radius: 15px;
  }
  .card-container .card-container-image {
    width: 100%;
    height: 30%;
  }
  .card-container .card-container-description {
    width: 100%;
    height: 90%;
    text-align: center;
    padding: 0 10px;
  }

  .card-container .card-container-image::before {
    border-radius: 0;
    border-top-right-radius: 20px;
    border-top-left-radius: 20px;
  }
  .card-container .card-container-image img {
    border-radius: 0;
    border-top-right-radius: 20px;
    border-top-left-radius: 20px;
  }
  .description-text {
    padding: 0 10px;
  }
  .card-container-description-statistics {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 30px;
    margin: 0;
  }
}

